--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -52,6 +52,7 @@ fr-FR:
       employee: 'Employé'
       entity: 'Relation'
       entity_category: 'Catégorie de relation'
+      entity_link_nature: (((ENTITY_LINK_NATURE)))
       entity_nature: 'Type de relation'
       entry: 'Écriture'
       establishment: 'Établissement'
@@ -197,8 +198,8 @@ fr-FR:
         district_id: 'Zone administrative'
         id: 'ID'
         lock_version: 'Version'
-        name: 'Zone'
-        postcode: 'Code postal'
+        name: (((NAME)))
+        postcode: (((POSTCODE)))
         updated_at: 'Mis à jour le'
         updater_id: 'Modificateur'
 
@@ -597,6 +598,20 @@ fr-FR:
         id: 'ID'
         lock_version: 'Version'
         name: 'Nom'
+        updated_at: 'Mis à jour le'
+        updater_id: 'Modificateur'
+
+      # translation missing: fr-FR, activerecord, models, entity_link_nature
+      entity_link_nature:
+        company_id: 'Société'
+        created_at: 'Créé le'
+        creator_id: 'Créateur'
+        id: 'ID'
+        lock_version: 'Version'
+        name: (((NAME)))
+        name_1_to_2: (((NAME_1_TO_2)))
+        name_2_to_1: (((NAME_2_TO_1)))
+        symmetric: (((SYMMETRIC)))
         updated_at: 'Mis à jour le'
         updater_id: 'Modificateur'
 
