--- a/config/locales/fr-FR.rights.yml
+++ b/config/locales/fr-FR.rights.yml
@@ -30,6 +30,7 @@ fr-FR:
     manage_entities: 'Gérer les fiches clients/fournisseurs'
     manage_entities_natures: 'Gérer les types de fiche'
     manage_entity_categories: 'Gérer les catégories de fiche'
+    manage_entity_links: (((MANAGE_ENTITY_LINKS)))
     manage_entries: 'Gérer les écritures'
     manage_financialyears: 'Gérer les exercices'
     manage_invoicing: 'Gérer la facturation et les règlements'
