--- a/config/locales/fr-FR.rights.yml
+++ b/config/locales/fr-FR.rights.yml
@@ -19,18 +19,17 @@ fr-FR:
     create_purchases: 'Créer, modifier des achats'
     import_export_entities: 'Importer, exporter des fiches clients/fournisseurs'
     manage_accounts: 'Gérer les comptes comptables'
-    manage_areas: (((MANAGE_AREAS)))
+    manage_areas: 'Gérer les zones'
     manage_bank_accounts: 'Gérer les comptes bancaires'
     manage_company: 'Gérer les informations de la société'
     manage_complements: 'Gérer les champs personnalisés'
     manage_delays: 'Gérer les délais'
     manage_delivery_modes: 'Gérer les types de livraison'
-    manage_districts: (((MANAGE_DISTRICTS)))
+    manage_districts: 'Gérer les districts'
     manage_embankments: 'Gérer les remises de chèques'
     manage_entities: 'Gérer les fiches clients/fournisseurs'
     manage_entities_natures: 'Gérer les types de fiche'
     manage_entity_categories: 'Gérer les catégories de fiche'
-    manage_entity_links: (((MANAGE_ENTITY_LINKS)))
     manage_entries: 'Gérer les écritures'
     manage_financialyears: 'Gérer les exercices'
     manage_invoicing: 'Gérer la facturation et les règlements'
