git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@990 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -969,6 +969,7 @@ fr-FR:
         company_id: 'Société'
         created_at: 'Créé le'
         creator_id: 'Créateur'
+        downpayment: 'Acompte'
         embanker_id: 'Encaisseur'
         embankment_id: (((EMBANKMENT_ID)))
         entity_id: 'Client'
