--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -68,6 +68,7 @@ fr-FR:
       listing: 'Extraction'
       listing_node: 'Noeud d''extraction'
       listing_node_item: 'Élément de noeud d''extraction'
+      mandate: (((MANDATE)))
       meeting: 'Rencontre'
       meeting_location: 'Lieu de rencontre'
       meeting_mode: 'Mode de rencontre'
@@ -199,8 +200,8 @@ fr-FR:
         district_id: 'Zone administrative'
         id: 'ID'
         lock_version: 'Version'
-        name: Libellé
-        postcode: Code postal
+        name: 'Zone'
+        postcode: 'Code postal'
         updated_at: 'Mis à jour le'
         updater_id: 'Modificateur'
 
@@ -329,7 +330,7 @@ fr-FR:
       contact:
         active: 'Actif'
         address: 'Adresse'
-        area_id: 'Zone postale'
+        area_id: 'sZone'
         closed_on: 'Annulé le'
         code: 'Code'
         company_id: 'Société'
@@ -657,12 +658,12 @@ fr-FR:
         company_id: 'Société'
         created_at: 'Créé le'
         creator_id: 'Créateur'
-        credit: (((CREDIT)))
+        credit: 'Crédit'
         currency_credit: 'Crédit'
         currency_debit: 'Débit'
         currency_id: (((CURRENCY_ID)))
         currency_rate: (((CURRENCY_RATE)))
-        debit: (((DEBIT)))
+        debit: 'Débit'
         editable: (((EDITABLE)))
         expired_on: (((EXPIRED_ON)))
         id: 'ID'
@@ -884,6 +885,23 @@ fr-FR:
         updater_id: 'Modificateur'
         value: (((VALUE)))
 
+      # (((MANDATE)))
+      mandate:
+        company_id: 'Société'
+        created_at: 'Créé le'
+        creator_id: 'Créateur'
+        entity_id: 'Fiche'
+        family: 'Famille'
+        group: 'Groupe'
+        id: 'ID'
+        lock_version: 'Version'
+        organization: 'Organisation'
+        started_on: 'Début'
+        stopped_on: 'Fin'
+        title: 'Titre'
+        updated_at: 'Mis à jour le'
+        updater_id: 'Modificateur'
+
       # Rencontre
       meeting:
         address: 'Adresse'
@@ -978,6 +996,8 @@ fr-FR:
         mode_id: 'Mode de paiement'
         paid_on: 'Réglé le'
         part_amount: (((PART_AMOUNT)))
+        received: (((RECEIVED)))
+        scheduled: (((SCHEDULED)))
         to_bank_on: 'À encaisser le'
         updated_at: 'Mis à jour le'
         updater_id: 'Modificateur'
