--- a/config/locales/fr-FR/help/company-users_create.txt
+++ b/config/locales/fr-FR/help/company-users_create.txt
@@ -2,7 +2,7 @@ h1. Comment créer un nouvel utilisateur ?
 
 h2. Informations de base
 
-Pour créer un nouvel utilisateur, il vous suffit de renseigner les différents paramètres qui vous sont demandés. Certains sont obligatoires (encadrés en bleu) et d'autres sont facultatifs (encadrés en gris). La création ne s'effectue uniquement que si tous les champs obligatoires ont été correctement renseignés.
+Pour créer un nouvel utilisateur, il vous suffit de renseigner les différents paramètres qui vous sont demandés. Certains sont obligatoires (encadrés en bleu) et d'autres sont facultatifs (encadrés en gris). La création ne s'effectue uniquement que si tous les champs obligatoires ont été correctement renseignés. En outre, vous pouvez vous **enregister automatiquement en tant qu'employé** (ce qui vous évitera cette opération dans le formulaire concerné du module **Ressource**). 
 
 h2. Les droits
 
