--- a/config/locales/fr-FR/help/relations-entities_display.txt
+++ b/config/locales/fr-FR/help/relations-entities_display.txt
@@ -15,6 +15,13 @@ Mais aussi de:
 * le modifier : <<accountancy-bank_accounts_update|{{buttons/update.png|modifier}}>> 
 * le supprimer :   {{buttons/delete.png|supprimer}}
 
+Mais aussi de:
+* créer une nouvelle responsabilité
+* la modifier : <<relation-mandates_update|{{buttons/update.png|modifier}}>> 
+* la supprimer :   {{buttons/delete.png|supprimer}}
+
+
+
 Vous ne pouvez pas supprimer une option de liste déroulante.
 
 h2. Informations concernant les ventes
