git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1007 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -406,12 +406,13 @@ fr-FR:
         delivered_on: 'Reçu le'
         id: 'ID'
         invoice_id: 'Facture'
+        invoiceable: 'À facturer'
         label: 'Libellé'
         lock_version: 'Version'
         mode_id: 'Type'
         moved_on: 'Faite le'
         nature: 'Type'
-        order_id: (((ORDER_ID)))
+        order_id: 'Vente'
         planned_on: 'Prévue le'
         quantity: 'Quantité'
         shipped_on: 'Envoyé le'
