git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1015 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -360,7 +360,10 @@ fr-FR:
     delete: 'Supprimer'
     display: 'Afficher'
     down: 'Descendre'
+    dyta_false: 'FAUX'
+    dyta_true: 'VRAI'
     edit: 'Modifier'
+    export: 'Exporter'
     employee: 'Informations employé'
     example: 'Exemple&nbsp;: {{value}}'
     filter: Filtrer
