--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -223,6 +223,12 @@ fr-FR:
       error_amount_balance2: 'Les montants utilisés dans les écritures doivent toujours être positifs.'
       error_amount_rate: 'Le taux de conversion n''existe pas.'        
       error_closed_entry: 'L''écriture {{value}} est verrouillée.'
+    event_nature:
+      usages:
+        invoice: 'Création d''une facture'
+        manual: 'Manuelle'
+        purchase_order: 'Création d''un achat'
+        sale_order: 'Création d''un devis'
     financialyear:
       error_stopped2_financialyear: 'La date de fin d''exercice doit être une date de fin de mois.'
       error_period_financialyear: 'La période de l''exercice comptable est incorrecte.'
