git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1023 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -1306,6 +1306,7 @@ fr-FR:
         lock_version: 'Version'
         name: 'Nom'
         payment_delay_id: 'Délai de paiement'
+        payment_type: 'Type de paiement'
         updated_at: 'Mis à jour le'
         updater_id: 'Modificateur'
 
