--- a/config/locales/fr-FR.pack.management.yml
+++ b/config/locales/fr-FR.pack.management.yml
@@ -5,9 +5,11 @@ fr-FR:
       category: 'Catégorie'
       choose_one_check_at_less: 'Sélectionnez au moins un chèque'
       client_code: 'Code cl.'
+      email: 'Email: '
       embankment: 'Remise de chèques'
       error_sale_order_already_paid: 'La vente a déjà été payée en totalité'
       estimate: 'Devis'
+      fax: 'Fax'
       import_succeed: 'Vos données ont été correctement importées'
       impossible_to_add_lines: 'Vous ne pouvez plus ajouter de produits à votre vente, le devis est passé en commande'
       impossible_to_add_lines_to_purchase: 'Vous ne pouvez plus ajouter de produits à votre achat'
@@ -28,6 +30,7 @@ fr-FR:
       order: 'Commande'
       paid_on: 'Réglé le'
       payment_amount: 'Montant du paiement'
+      phone: 'Tél.'
       price: 'Prix'
       price_amount_with_taxes: 'Prix TTC'
       prices:
