--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -509,10 +509,12 @@ fr-FR:
         created_at: 'Créé le'
         created_on: 'Crée le'
         creator_id: 'Créateur'
+        embanker_id: (((EMBANKER_ID)))
         id: 'ID'
         lock_version: 'Version'
         locked: (((LOCKED)))
         mode_id: 'Type de paiement'
+        payments_count: (((PAYMENTS_COUNT)))
         payments_number: 'Nombre de chèque'
         updated_at: 'Mis à jour le'
         updater_id: 'Modificateur'
@@ -544,6 +546,7 @@ fr-FR:
       # Relation
       entity:
         active: 'Actif'
+        authorized_payments_count: (((AUTHORIZED_PAYMENTS_COUNT)))
         born_on: 'Date de naissance'
         category_id: 'Catégorie'
         client: 'Client'
@@ -585,6 +588,7 @@ fr-FR:
         updater_id: 'Modificateur'
         vat_number: 'Numéro de TVA intra-communautaire'
         vat_submissive: 'Soumis à la TVA'
+        webpass: (((WEBPASS)))
         website: 'Site Web'
 
       # Catégorie de relation
@@ -602,7 +606,7 @@ fr-FR:
         updated_at: 'Mis à jour le'
         updater_id: 'Modificateur'
 
-      # (((ENTITY_LINK)))
+      # Lien de relation
       entity_link:
         comment: 'Commentaire'
         company_id: 'Société'
@@ -618,8 +622,9 @@ fr-FR:
         updated_at: 'Mis à jour le'
         updater_id: 'Modificateur'
 
-      # (((ENTITY_LINK_NATURE)))
+      # Nature du lien de la relation
       entity_link_nature:
+        comment: 'Commentaire'
         company_id: 'Société'
         created_at: 'Créé le'
         creator_id: 'Créateur'
@@ -691,7 +696,7 @@ fr-FR:
         updated_at: 'Mis à jour le'
         updater_id: 'Modificateur'
 
-      # (((EVENT)))
+      # Évènement
       event:
         company_id: 'Société'
         created_at: 'Créé le'
@@ -709,7 +714,7 @@ fr-FR:
         updated_at: 'Mis à jour le'
         updater_id: 'Modificateur'
 
-      # (((EVENT_NATURE)))
+      # Type d'évènement
       event_nature:
         company_id: 'Société'
         created_at: 'Créé le'
@@ -769,6 +774,7 @@ fr-FR:
       invoice:
         amount: 'Montant HT'
         amount_with_taxes: 'Montant TTC'
+        annotation: (((ANNOTATION)))
         client_id: 'Client'
         company_id: 'Société'
         contact_id: 'Adresse'
@@ -776,7 +782,8 @@ fr-FR:
         created_on: 'Créée le'
         creator_id: 'Créateur'
         credit: 'Avoir'
-        downpayment_price: (((DOWNPAYMENT_PRICE)))
+        downpayment_amount: (((DOWNPAYMENT_AMOUNT)))
+        downpayment_price: '(((DOWNPAYMENT_PRICE)))'
         has_downpayment: (((HAS_DOWNPAYMENT)))
         id: 'ID'
         lock_version: 'Version'
@@ -796,6 +803,7 @@ fr-FR:
       invoice_line:
         amount: 'Montant HT'
         amount_with_taxes: 'Montant TTC'
+        annotation: (((ANNOTATION)))
         company_id: 'Société'
         created_at: 'Créé le'
         creator_id: 'Créateur'
@@ -858,6 +866,7 @@ fr-FR:
         id: 'ID'
         iso2: (((ISO2)))
         iso3: (((ISO3)))
+        lock_version: 'Version'
         name: (((NAME)))
         native_name: (((NATIVE_NAME)))
         updated_at: 'Mis à jour le'
@@ -915,7 +924,7 @@ fr-FR:
         updater_id: 'Modificateur'
         value: (((VALUE)))
 
-      # (((MANDATE)))
+      # Responsabilité
       mandate:
         company_id: 'Société'
         created_at: 'Créé le'
@@ -994,6 +1003,7 @@ fr-FR:
       # Mode de réglement
       payment_mode:
         account_id: 'Compte associé'
+        bank_account_id: (((BANK_ACCOUNT_ID)))
         company_id: 'Société'
         created_at: 'Créé le'
         creator_id: 'Créateur'
@@ -1011,7 +1021,9 @@ fr-FR:
         company_id: 'Société'
         created_at: 'Créé le'
         creator_id: 'Créateur'
+        downpayment: (((DOWNPAYMENT)))
         id: 'ID'
+        invoice_id: (((INVOICE_ID)))
         lock_version: 'Version'
         order_id: 'Vente'
         payment_id: 'Réglement'
@@ -1063,7 +1075,7 @@ fr-FR:
       product:
         active: 'Utilisable'
         actual_number: 'Numéro en cours'
-        amount: (((AMOUNT)))
+        amount: '(((AMOUNT)))'
         catalog_description: 'Description pour le catalogue'
         catalog_name: 'Nom pour le catalogue'
         charge_account_id: 'Compte comptable de charges'
@@ -1231,6 +1243,7 @@ fr-FR:
       sale_order:
         amount: 'Montant HT'
         amount_with_taxes: 'Montant TTC'
+        annotation: (((ANNOTATION)))
         client_id: 'Client'
         comment: 'Commentaire'
         company_id: 'Société'
@@ -1271,6 +1284,7 @@ fr-FR:
         account_id: (((ACCOUNT_ID)))
         amount: 'Montant HT'
         amount_with_taxes: 'Montant TTC'
+        annotation: (((ANNOTATION)))
         company_id: 'Société'
         created_at: 'Créé le'
         creator_id: 'Créateur'
@@ -1487,17 +1501,22 @@ fr-FR:
         contact_id: 'Adresse de l''abonné'
         created_at: 'Créé le'
         creator_id: 'Créateur'
+        entity_id: (((ENTITY_ID)))
         entity_name: 'Abonné'
         finish: 'Termine le'
         finished_on: 'Termine le'
         first_number: 'Premier numéro'
         id: 'ID'
+        invoice_id: (((INVOICE_ID)))
         last_number: 'Dernier numéro'
         lock_version: 'Version'
         nature_id: 'Type'
         product_id: 'Produit'
+        quantity: (((QUANTITY)))
         sale_order_id: (((SALE_ORDER_ID)))
         started_on: 'Débute le'
+        stopped_on: (((STOPPED_ON)))
+        suspended: (((SUSPENDED)))
         updated_at: 'Mis à jour le'
         updater_id: 'Modificateur'
 
