git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1028 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.pack.relations.yml
+++ b/config/locales/fr-FR.pack.relations.yml
@@ -210,6 +210,8 @@ fr-FR:
         title: 'Types de lien'
       entity_link_natures_create:
         title: 'Ajout d''un nouveau type de lien'
+      entity_link_natures_update:
+        title: 'Modification du type de lien {{value}}'
       entity_links_create:
         title: 'Ajout d''un nouveau lien à {{name}}'
       _entity_links_form:
