git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1029 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR/help/management-stocks_locations_create.txt
+++ b/config/locales/fr-FR/help/management-stocks_locations_create.txt
@@ -3,4 +3,6 @@ h1. Comment créer un nouveau lieu de stockage ?
 Pour créer un nouveau lieu de stockage, il vous suffit de renseigner les différents paramètres qui vous sont demandés. Certains sont obligatoires (encadrés bleux) et d'autres sont facultatifs (encadrés gris). La création ne peut s'effectuer uniquement si tous les champs obligatoires ont été correctement renseignés.
 
 
+Le compte comptable associé est un compte de classe 3 (commencant par 3).
+
 <<management-index|Retour à l'aide sur la Gestion Commerciale>>
