git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1034 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.pack.application.yml
+++ b/config/locales/fr-FR.pack.application.yml
@@ -11,6 +11,7 @@ fr-FR:
       exit: 'Se déconnecter'
       false: 'non'
       true: 'oui'
-
+      all_financialyears: '--- Tous les exercices ---'
+      all_journals: '--- Tous les journaux ---'
   views:
     application:
