--- a/config/locales/fr-FR/help/management-payments_create.txt
+++ b/config/locales/fr-FR/help/management-payments_create.txt
@@ -2,7 +2,7 @@ h1. Comment créer un nouveau règlement ?
 
 Vous avez *deux possibilités pour ajouter un nouveau règlement*:
 
-* En créant un *nouveau paiement*. Si le montant de celui-ci dépasse le montant total de la vente, le paiement sera créé avec le montant fournit et c'est seulement la part correspondant au montant de la vente qui lui sera attribuée. Si le paiment est de type chèque et que vous souhaitez uitiliser *les remises de chèques* vous devez renseigner les informations: numéro de chèque, numéro de compte, banque.
+* En créant un *nouveau paiement*. Si le montant de celui-ci dépasse le montant total de la vente, le paiement sera créé avec le montant fournit et c'est seulement la part correspondant au montant de la vente qui lui sera attribuée. Si le paiment est de type chèque et que vous souhaitez utiliser *les remises de chèques*, vous devez renseigner les informations: numéro de chèque, numéro de compte, banque.
 
 * En utilisant des *parts existantes* qui sont créées lors d'un paiement supérieur au montant total de la vente.
 
