git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1037 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -1587,6 +1587,7 @@ fr-FR:
         lock_version: 'Version'
         locked: 'Compte verrouillé'
         name: 'Nom d''utilisateur'
+        old_password: 'Mot de passe actuel'
         password: 'Mot de passe'
         password_confirmation: 'Confirmation du mot de passe'
         reduction_percent: 'Taux de réduction autorisé (%)'
