--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -806,6 +806,7 @@ fr-FR:
         company_id: 'Société'
         created_at: 'Créé le'
         creator_id: 'Créateur'
+        entity_id: (((ENTITY_ID)))
         id: 'ID'
         invoice_id: (((INVOICE_ID)))
         lock_version: 'Version'
@@ -1098,18 +1099,20 @@ fr-FR:
         product_account_id: 'Compte comptable de produits'
         quantity_max: 'Quantité maximum'
         quantity_min: 'Quantité minimum'
+        reduction_submissive: (((REDUCTION_SUBMISSIVE)))
         service_coeff: 'Coefficient (de quantité) de service'
         shelf_id: 'Catégorie'
         subscription_nature_id: 'Type'
         subscription_numbers: 'Nombre de numéros'
         subscription_period: 'Période'
-        subscription_quantity: (((SUBSCRIPTION_QUANTITY)))
+        subscription_quantity: 'Quantité'
         supply_method: 'Moyen d''approvisionnement'
         to: 'Pour'
         to_purchase: 'Produit destiné à l''achat'
         to_rent: 'Produit destiné à la location'
         to_sale: 'Produit destiné à la vente'
         unit_id: 'Unité de mesure'
+        unquantifiable: (((UNQUANTIFIABLE)))
         updated_at: 'Mis à jour le'
         updater_id: 'Modificateur'
         weight: 'Poids (kg)'
@@ -1287,6 +1290,7 @@ fr-FR:
         company_id: 'Société'
         created_at: 'Créé le'
         creator_id: 'Créateur'
+        entity_id: (((ENTITY_ID)))
         id: 'ID'
         invoiced: (((INVOICED)))
         location_id: 'Lieu de stockage'
@@ -1496,26 +1500,27 @@ fr-FR:
       # Abonnement
       subscription:
         beginning: 'Débute le'
+        comment: 'Commentaire'
         company_id: 'Société'
         contact_id: 'Adresse de l''abonné'
         created_at: 'Créé le'
         creator_id: 'Créateur'
-        entity_id: (((ENTITY_ID)))
+        entity_id: 'Relation'
         entity_name: 'Abonné'
-        finish: 'Termine le'
-        finished_on: 'Termine le'
+        finish: 'Fin'
         first_number: 'Premier numéro'
         id: 'ID'
-        invoice_id: (((INVOICE_ID)))
+        invoice_id: 'Facture'
         last_number: 'Dernier numéro'
         lock_version: 'Version'
         nature_id: 'Type'
         product_id: 'Produit'
-        quantity: (((QUANTITY)))
-        sale_order_id: (((SALE_ORDER_ID)))
-        started_on: 'Débute le'
-        stopped_on: (((STOPPED_ON)))
-        suspended: (((SUSPENDED)))
+        quantity: 'Quantité'
+        sale_order_id: 'Vente'
+        start: 'Début'
+        started_on: 'Débuté le'
+        stopped_on: 'Arrété le'
+        suspended: 'Suspendu'
         updated_at: 'Mis à jour le'
         updater_id: 'Modificateur'
 
