--- a/config/locales/fr-FR.pack.company.yml
+++ b/config/locales/fr-FR.pack.company.yml
@@ -25,9 +25,9 @@ fr-FR:
         with_prints: 'Inclure les impressions (factures, commandes...)'
         your_new_code_is: 'Votre nouveau code société est : {{value}}'
       change_password:
-        title: Changer son mot de passe
-        put_old_password: Saisissez votre mot de passe actuel
-        put_new_password: Saisissez votre nouveau mot de passe
+        put_new_password: 'Saisissez votre nouveau mot de passe'
+        put_old_password: 'Saisissez votre mot de passe actuel'
+        title: 'Changer son mot de passe'
       configure:
         accountancy: 'Comptabilité'
         general: 'Paramètres généraux'
